[gd_scene load_steps=22 format=2]

[ext_resource path="res://Cenas/FGBG/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Backgrounds/ground1.png" type="Texture" id=2]
[ext_resource path="res://Cenas/Jogador/CyborgPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sprites/BotaoStart2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/ButtonPlayer.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/ButtonInfo.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sprites/Player/Punk_jump/Punk_jump3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Player/Punk_jump/Punk_jump1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Player/Punk_jump/Punk_jump4.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Player/Punk_jump/Punk_jump2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Player/Biker_run/Biker_run6.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Player/Biker_run/Biker_run2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Player/Biker_run/Biker_run4.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Player/Biker_run/Biker_run3.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Player/Biker_run/Biker_run5.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/Player/Biker_run/Biker_run1.png" type="Texture" id=17]
[ext_resource path="res://Cenas/Spawners/Otimizador.tscn" type="PackedScene" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 12 ) ],
"loop": true,
"name": "run",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 62.6562, 3.16 )

[node name="Menu" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -46, 819 )
scale = Vector2( 0.56993, 0.56993 )
texture = ExtResource( 2 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 212, 578 )
scale = Vector2( 2.86765, 2.86765 )
frames = SubResource( 1 )
animation = "jump"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 65, 680 )
scale = Vector2( 3.15957, 3.15957 )
frames = SubResource( 2 )
animation = "run"
frame = 3

[node name="CyborgPlayer" parent="." instance=ExtResource( 3 )]
position = Vector2( 231, 328 )

[node name="Button" type="TouchScreenButton" parent="."]
position = Vector2( 153, 345 )
scale = Vector2( 0.723333, 0.711592 )
normal = ExtResource( 4 )

[node name="Button2" type="Button" parent="."]
margin_left = 149.0
margin_top = 331.0
margin_right = 374.0
margin_bottom = 570.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="InfoButton" type="TouchScreenButton" parent="."]
position = Vector2( 299, 4 )
scale = Vector2( 0.715329, 0.716536 )
normal = ExtResource( 6 )

[node name="InfoButton2" type="Button" parent="."]
margin_left = 291.0
margin_top = -5.0
margin_right = 402.0
margin_bottom = 101.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
expand_icon = true

[node name="PlayerButton" type="TouchScreenButton" parent="."]
position = Vector2( 396, 2 )
scale = Vector2( 0.716535, 0.716535 )
normal = ExtResource( 5 )

[node name="PlayerButton2" type="Button" parent="."]
margin_left = 391.0
margin_top = -13.0
margin_right = 502.0
margin_bottom = 110.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="Area2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 264, 403 )
scale = Vector2( 1.54015, 1.51515 )
shape = SubResource( 3 )

[node name="Otimizador" parent="." instance=ExtResource( 18 )]
position = Vector2( -229, 517 )
scale = Vector2( 83.2, 58.6 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="InfoButton2" to="." method="_on_InfoButton2_pressed"]
[connection signal="pressed" from="PlayerButton" to="." method="_on_PlayerButton_pressed"]
[connection signal="pressed" from="PlayerButton2" to="." method="_on_PlayerButton2_pressed"]
